[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kontakt"
version = "0.1.0"
description = "Extracts public contact channels from a website URL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
kontakt = "kontakt.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["kontakt"]
